2.1-release  (???)
===========
- modified import from to add jar file to system classpath.  This
  uses a reflection hack but it now means you can add multiple jars
  and they can find resources from eachother, all at runtime.

  This hack came from Ralph Becker's Classpath extension for Sleep.  
- 

2.1-release  (1 Jul 08)
===========
- splice() no longer corrupts sublists.
- values(%hash) now omits $null values.  
- sped up scope functions: &local, &global, and &this by cacheing 
  the regex pattern used to split up the var names
- added a compile time check for %(a => ... b => ...) errors
  [notice the missing comma between the key/value pairs]

2.1-release  (16 Jun 08)
===========
- SleepUtils#runCode(SleepClosure, ...) now accepts a null value
  for the ScriptInstance parameter.
- eliminated unnecessary frame creation within the Index operator
- added a check to cleanup the current frame when a bad index 
  error occurs.

2.1-beta 27  (30 May 08)
===========
- Virtual machine errors (stack overflow, out of memory) etc.
  are now caught within the interpreter and used to coerce
  a printout of the location of each Sleep stack frame.
- SleepClosure now implements the Runnable interface.
- fixed a null pointer exception for assertions triggered
  with no preceeding statements.
- created a java.util.List compatible data structure to back
  Sleep arrays.  this data structure is similar to LinkedList
  except it creates sublists with more desired performance
  characteristics
- added better error messages for ConcurrentModificationException's
  thrown by Java
- foreach loops now break if a ConcurrentModificationException
  is thrown.
- reimplemented regex pattern and hasmatch state cacheing to 
  prevent memory leaks.  Sleep will cache 128 patterns globally 
  and up to 16 hasmatch contexts per closure.  Remember that 
  hasmatch will remove its state after returning false.  These
  measures are in place to help prevent runaway uses of 